# tonyfettes-android-raylib-minesweeper

./: .gitignore  .gitmodules  CLAUDE.md  README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Minesweeper.cpp  Minesweeper.h  main.cpp
app/src/main/java/com/example/raylibminesweeper/: MainActivity.kt
app/src/main/moonbit/: board.mbt  camera.mbt  game.mbt  input.mbt  main.mbt  moon.mod.json  moon.pkg  pkg.generated.mbti  render.mbt
gradle/: libs.versions.toml
